Finagle some styles on the greenfield playlist view collapsing to correctly show waveform and track content on mobile

--- a/app/assets/stylesheets/white_theme/cover_view.scss
+++ b/app/assets/stylesheets/white_theme/cover_view.scss
@@ -7,7 +7,7 @@
   }
   min-width: 400px;
   @media #{$mobile} {
-    min-width: none;
+    // min-width: 0;
   }
   .large-cover {
     width: 100%;
